--- a/views/dashboardLayout.ejs
+++ b/views/dashboardLayout.ejs
@@ -3,16 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Rewards App Dashboard</title>
-    <!-- STYLES -->
-    <!-- STYLES END -->
+
+    <!-- Viewport mobile tag for sensible mobile support -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <!--STYLES-->
+    <link rel="stylesheet" href="/styles/dependencies/angular-material.css">
+    <link rel="stylesheet" href="/styles/importer.css">
+    <!--STYLES END-->
 </head>
-<body>
+<body ng-app="dashboardApp" ng-controller="AppCtrl" ng-cloak>
     <md-toolbar>
         <h1>Dashboard</h1>
     </md-toolbar>
     <% body %>
 
-    <!-- SCRIPTS -->
-    <!-- SCRIPTS END -->
+    <!--SCRIPTS-->
+    <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/dependencies/angular.js"></script>
+    <script src="/js/dependencies/angular-animate.js"></script>
+    <script src="/js/dependencies/angular-aria.js"></script>
+    <script src="/js/dependencies/angular-material.js"></script>
+    <script src="/js/app/home/homeApp.js"></script>
+    <script src="/js/app/home/controllers/AppCtrl.js"></script>
+    <script src="/js/app/dashboard/dashboardApp.js"></script>
+    <script src="/js/app/dashboard/controllers/AppCtrl.js"></script>
+    <!--SCRIPTS END-->
 </body>
 </html>
