--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -1,7 +1,7 @@
 <md-content>
     <md-card>
         <md-card-content>
-            <h2>Some content inside an md-card</h2> 
+            <h2>{{ test }}</h2> 
         </md-card-content>
     </md-card>
 </md-content>
