Added the authorization using passport

--- a/views/dashboardLayout.ejs
+++ b/views/dashboardLayout.ejs
@@ -15,7 +15,7 @@
     <md-toolbar>
         <h1>Dashboard</h1>
     </md-toolbar>
-    <% body %>
+    <%- body %>
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
