--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -6,3 +6,9 @@
         </md-card-content>
     </md-card>
 </md-content>
+<a href="/login" class="md-button md-fab" aria-label="Login">
+    <md-icon md-svg-src="img/icons/android.svg"></md-icon>
+</a>
+<a href="/register" class="md-button md-fab" aria-label="Login">
+    <md-icon md-font-icon="android" ></md-icon>
+</a>
