--- a/views/dashboardLayout.ejs
+++ b/views/dashboardLayout.ejs
@@ -29,5 +29,6 @@
     <script src="/js/app/dashboard/dashboardApp.js"></script>
     <script src="/js/app/dashboard/controllers/AppCtrl.js"></script>
     <!--SCRIPTS END-->
+<script src="//cdn.jsdelivr.net/angular-material-icons/0.4.0/angular-material-icons.min.js"></script> 
 </body>
 </html>
