--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -31,7 +31,6 @@
     <link rel="stylesheet" href="/styles/dependencies/angular-material.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
-
   </head>
 
   <body ng-app="homeApp" ng-controller="AppCtrl" ng-cloak>
@@ -102,5 +101,6 @@
     <script src="/js/app/dashboard/dashboardApp.js"></script>
     <script src="/js/app/dashboard/controllers/AppCtrl.js"></script>
     <!--SCRIPTS END-->
+    <script src="//cdn.jsdelivr.net/angular-material-icons/0.4.0/angular-material-icons.min.js"></script> 
   </body>
 </html>
