--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -5,8 +5,22 @@
 <% } %>
 
 <form role="form" action="/auth/local/register" method="post">
-  <input type="text" name="username" placeholder="Username">
-  <input type="text" name="email" placeholder="Email">
-  <input type="password" name="password" placeholder="Password">
-  <button type="submit">Sign up</button>
+
+    <div layout="column">
+      <md-input-container>
+        <label>Username</label>
+        <input name="username" md-no-float>
+      </md-input-container>
+      <md-input-container>
+        <label>Email</label>
+        <input type="email" name="email" md-no-float>
+      </md-input-container>
+      <md-input-container>
+        <label>Password</label>
+        <input type="password" name="password" md-no-float>
+      </md-input-container>
+    </div>
+    <div layout="row">
+      <button type="submit" class="md-button md-raised">Sign up</button>
+    </div>
 </form>
