don't include changes in the bower library directory

--- a/views/dashboardLayout.ejs
+++ b/views/dashboardLayout.ejs
@@ -9,6 +9,7 @@
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
+    <link href="libs/angular-material/angular-material.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     
 </head>
@@ -18,6 +19,7 @@
         <h2>
           <span>Dashboard</span>
         </h2>
+        <span flex></span>
         <a href="/logout" class="md-button md-raised">
             Log out
         </a>
