--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,9 +27,9 @@
             + Use a different or additional preprocessor, like SASS, SCSS or Stylus
     -->
     <!--STYLES-->
-    <link rel="stylesheet" href="/styles/dependencies/angular-material.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
+    <link href="libs/angular-material/angular-material.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <script type="text/javascript" src=""></script>
