Added a link to the home using the header

--- a/views/dashboardLayout.ejs
+++ b/views/dashboardLayout.ejs
@@ -17,7 +17,7 @@
     <md-toolbar>
       <div class="md-toolbar-tools">
         <h2>
-          <span>Dashboard</span>
+          <a href="/dashboard">Dashboard</a>
         </h2>
         <span flex></span>
         <a href="/logout" class="md-button md-raised">
