--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -39,7 +39,7 @@
     <md-toolbar>
       <div class="md-toolbar-tools">
         <h2>
-          <span>Welcome to IC Rewards Application</span>
+          <a href="/">Welcome to IC Rewards Application</a>
         </h2>
         <span flex></span>
         <a href="/login" class="md-button md-raised" aria-label="Login">
