--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -113,6 +113,7 @@
     <script src="/js/app/home/controllers/AppCtrl.js"></script>
     <script src="/js/app/dashboard/dashboardApp.js"></script>
     <script src="/js/app/dashboard/controllers/AppCtrl.js"></script>
+    <script src="/js/app/dashboard/services/cardService.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
