Added ui router controllers to the views

--- a/assets/partials/family.html
+++ b/assets/partials/family.html
@@ -1,1 +1,10 @@
-<h1>Family State</h1>
+<md-card layout-padding>
+    <md-toolbar>
+        <div class="md-toolbar-tools">
+            <span>Family State</span>
+        </div>
+    </md-toolbar>
+    <md-card-content>
+        This is the content
+    </md-card-content>
+</md-card>
