--- a/views/dashboardLayout.ejs
+++ b/views/dashboardLayout.ejs
@@ -33,7 +33,7 @@
             <md-toolbar >
               <div class="md-toolbar-tools">
                 <h2>
-                  <a href="/dashboard">Dashboard</a>
+                  <a href="/dashboard">{{ pageProperties.pageTitle }}</a>
                 </h2>
                 <span flex></span>
                 <a href="/logout" class="md-button md-raised">
@@ -58,7 +58,10 @@
     <script src="/js/app/home/homeApp.js"></script>
     <script src="/js/app/home/controllers/AppCtrl.js"></script>
     <script src="/js/app/dashboard/dashboardApp.js"></script>
+    <script src="/js/app/dashboard/controllers/AboutViewCtrl.js"></script>
     <script src="/js/app/dashboard/controllers/AppCtrl.js"></script>
+    <script src="/js/app/dashboard/controllers/FamilyViewCtrl.js"></script>
+    <script src="/js/app/dashboard/controllers/SettingsViewCtrl.js"></script>
     <script src="/js/app/dashboard/controllers/SideMenuCtrl.js"></script>
     <!--SCRIPTS END-->
 </body>
