--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -113,7 +113,10 @@
     <script src="/js/app/home/homeApp.js"></script>
     <script src="/js/app/home/controllers/AppCtrl.js"></script>
     <script src="/js/app/dashboard/dashboardApp.js"></script>
+    <script src="/js/app/dashboard/controllers/AboutViewCtrl.js"></script>
     <script src="/js/app/dashboard/controllers/AppCtrl.js"></script>
+    <script src="/js/app/dashboard/controllers/FamilyViewCtrl.js"></script>
+    <script src="/js/app/dashboard/controllers/SettingsViewCtrl.js"></script>
     <script src="/js/app/dashboard/controllers/SideMenuCtrl.js"></script>
     <!--SCRIPTS END-->
   </body>
