made the inner views display the right title in the toolbar

--- a/views/dashboardLayout.ejs
+++ b/views/dashboardLayout.ejs
@@ -63,6 +63,7 @@
     <script src="/js/app/dashboard/controllers/FamilyViewCtrl.js"></script>
     <script src="/js/app/dashboard/controllers/SettingsViewCtrl.js"></script>
     <script src="/js/app/dashboard/controllers/SideMenuCtrl.js"></script>
+    <script src="/js/app/dashboard/services/pagePropertiesService.js"></script>
     <!--SCRIPTS END-->
 </body>
 </html>
