Added members of the family view

--- a/views/dashboardLayout.ejs
+++ b/views/dashboardLayout.ejs
@@ -61,6 +61,7 @@
     <script src="/js/app/dashboard/controllers/AboutViewCtrl.js"></script>
     <script src="/js/app/dashboard/controllers/AppCtrl.js"></script>
     <script src="/js/app/dashboard/controllers/FamilyViewCtrl.js"></script>
+    <script src="/js/app/dashboard/controllers/MemberViewCtrl.js"></script>
     <script src="/js/app/dashboard/controllers/SettingsViewCtrl.js"></script>
     <script src="/js/app/dashboard/controllers/SideMenuCtrl.js"></script>
     <script src="/js/app/dashboard/services/pagePropertiesService.js"></script>
