--- a/assets/styles/family.less
+++ b/assets/styles/family.less
@@ -3,3 +3,25 @@
 md-progress-linear {
     padding: @padding-space 0;
 }
+
+.member-icon-container {
+    text-align: center;
+    padding: 0 30px;
+}
+
+.member-icon-container img {
+    width: 150px;
+    height: 150px;
+    border-radius: 75px;
+    -webkit-border-radius: 75px;
+    -moz-border-radius: 75px;
+}
+
+md-card-content h3 {
+    margin: 0.5em 0;
+}
+
+.member-card-side-nav {
+    min-width: 130px;
+    width: 130px;
+}
