--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -31,3 +31,18 @@
 
 @import 'angular.less';
 @import 'family.less';
+
+.ra-clickable {
+    cursor: pointer;
+}
+
+ra-card-menu {
+    position: absolute;
+    top: 5px;
+    right: 0px;
+}
+
+.member-card-menu {
+    border: 1px solid #f3f3f3;
+    box-shadow: 3px 3px 5px #f3f3f3;
+}
