--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -116,9 +116,13 @@
     <script src="/js/app/dashboard/controllers/AboutViewCtrl.js"></script>
     <script src="/js/app/dashboard/controllers/AppCtrl.js"></script>
     <script src="/js/app/dashboard/controllers/FamilyViewCtrl.js"></script>
+    <script src="/js/app/dashboard/controllers/MemberMenuCtrl.js"></script>
     <script src="/js/app/dashboard/controllers/MemberViewCtrl.js"></script>
     <script src="/js/app/dashboard/controllers/SettingsViewCtrl.js"></script>
     <script src="/js/app/dashboard/controllers/SideMenuCtrl.js"></script>
+    <script src="/js/app/dashboard/directives/raCardMenu.js"></script>
+    <script src="/js/app/dashboard/services/cardService.js"></script>
+    <script src="/js/app/dashboard/services/familyService.js"></script>
     <script src="/js/app/dashboard/services/pagePropertiesService.js"></script>
     <!--SCRIPTS END-->
   </body>
